--- a/app/views/coach/lessons/_list.html.erb
+++ b/app/views/coach/lessons/_list.html.erb
@@ -73,6 +73,7 @@
               <% end %>
               <p><strong>Price:</strong> $<%= lesson.price %>/hr</p>
               <p><strong>Description:</strong> <%= lesson.description %></p>
+              <%# to insert a map here %>
           </div>
           <div class="modal-footer">
             <%= link_to('Edit', edit_coach_lesson_path(lesson), class: "btn btn-primary") %>
