--- a/app/views/coaches/show.html.erb
+++ b/app/views/coaches/show.html.erb
@@ -42,11 +42,11 @@
             <span class="lesson-date duration"><%= ((lesson.end_date_time - lesson.start_date_time)/60).round() %> mins</span>
           </div>
 
-          <div class="lesson-details">
-            <strong><%= lesson.coach.sport.name.capitalize %> Class <i class="material-icons mr-1"><%= sport_icon(lesson.coach.sport.name) %></i></strong>
-            <span>Coach: <%= User.find(lesson.coach_id).name %></span>
-            <span>Location: <%= lesson.location %></span>
-          </div>
+        <div class="lesson-details">
+          <strong><%= lesson.coach.sport.name.capitalize %> Class <i class="material-icons mr-1"><%= sport_icon(lesson.coach.sport.name) %></i></strong>
+          <span>Coach: <%= User.find(lesson.coach_id).name %></span>
+          <span>Location: <%= lesson.location.name %></span>
+        </div>
 
           <div class="lesson-price">
             <p>Price: <%= humanized_money_with_symbol(lesson.price) %></p>
