--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -11,10 +11,14 @@
         <li>TOTAL <%= humanized_money_with_symbol @order.amount %></li>
         </li>
       </ul>
-      <div class="col-md-3"><%= image_tag 'https://www.cs.csubak.edu/~rayala/2680_F19/proj1/images/location.jpg', width: '100%' %>
+      <%# <div class="col-md-3"><%= image_tag 'https://www.cs.csubak.edu/~rayala/2680_F19/proj1/images/location.jpg', width: '100%' %>
+      <div id="map"
+                   style="width: 100%; height: 300px;"
+                   data-markers="<%= {lng: @order.lesson.location.long, lat: @order.lesson.location.lat}.to_json %>"
+                   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+      <br>
+      <%= link_to 'My Lessons', lessons_path, class: 'btn btn-flat' %>
   </div>
-  <br>
-  <%= link_to 'My Lessons', lessons_path, class: 'btn btn-flat' %>
     </div>
   </div>
 </div>
