--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,6 +1,10 @@
 <div class="container">
   <div class="row py-4">
-  <div class="col-md-3"><%= image_tag 'https://www.cs.csubak.edu/~rayala/2680_F19/proj1/images/location.jpg', width: '100%' %>
+  <%# <div class="col-md-3"><%= image_tag 'https://www.cs.csubak.edu/~rayala/2680_F19/proj1/images/location.jpg', width: '100%' %>
+  <div id="map"
+                   style="width: 100%; height: 300px;"
+                   data-markers="<%= {lng: @order.lesson.location.long, lat: @order.lesson.location.lat}.to_json %>"
+                   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
   </div>
     <div class="col">
       <h1>Checkout summary</h1>
