--- a/app/views/coaches/show.html.erb
+++ b/app/views/coaches/show.html.erb
@@ -34,7 +34,7 @@
     <span>No available lessons at the moment.</span>
   <% else %>
     <% @lessons.each do |lesson| %>
-      <% if lesson.status %>
+      <% if !lesson.status %>
         <div class="lesson-card">
           <div class="lesson-date">
             <span class="lesson-date date"><%= lesson.start_date_time.strftime("%-d %b %Y") %></span>
