fixed date logic for order sorting

--- a/app/views/coach/accounts/index.html.erb
+++ b/app/views/coach/accounts/index.html.erb
@@ -4,42 +4,40 @@
   </div>
   <div class='accounts-container'>
     <% date = "" %>
-    <% @lessons.each do |lesson| %>
-      <% if lesson.order %>
-        <% if lesson.order.created_at.localtime.strftime("%d %b %Y") != date %>
-          <div class='accounts-date-card'> <%= lesson.order.created_at.localtime.strftime("%d %b %Y") %></div>
-          <div class='accounts-card'>
-            <div class='account-details'>
-              <span><strong>Booked by: <%= lesson.order.user.name %></strong></span>
-              <span>Order Id: <%= lesson.order.id %> </span>
-              <span>Visa *****4242 </span>
-            </div>
-            <div class='account-amount'>
-              <% if lesson.order.state == 'paid' %>
-                <span>+ $<%= lesson.order.amount %></span>
-              <% else %>
-                <span>Pending $<%= lesson.order.amount %></span>
-              <% end %>
-            </div>
+    <% @lessons_with_orders.each do |lesson| %>
+      <% if lesson.order.created_at.localtime.strftime("%d %b %Y") != date %>
+        <div class='accounts-date-card'> <%= lesson.order.created_at.localtime.strftime("%d %b %Y") %></div>
+        <div class='accounts-card'>
+          <div class='account-details'>
+            <span><strong>Booked by: <%= lesson.order.user.name %></strong></span>
+            <span>Order Id: <%= lesson.order.id %> </span>
+            <span>Visa *****4242 </span>
           </div>
-          <% date = lesson.order.created_at.localtime.strftime("%d %b %Y") %>
+          <div class='account-amount'>
+            <% if lesson.order.state == 'paid' %>
+              <span>+ $<%= lesson.order.amount %></span>
+            <% else %>
+              <span>Pending $<%= lesson.order.amount %></span>
+            <% end %>
+          </div>
+        </div>
+        <% date = lesson.order.created_at.localtime.strftime("%d %b %Y") %>
 
-        <% else %>
-          <div class='accounts-card'>
-            <div class='account-details'>
-              <span><strong>Booked by: <%= lesson.order.user.name %></strong></span>
-              <span>Order Id: <%= lesson.order.id %> </span>
-              <span>Visa *****4242 </span>
-            </div>
-            <div class='account-amount'>
-              <% if lesson.order.state == 'paid' %>
-                <span>+ $<%= lesson.order.amount %></span>
-              <% else %>
-                <span>Pending $<%= lesson.order.amount %></span>
-              <% end %>
-            </div>
+      <% else %>
+        <div class='accounts-card'>
+          <div class='account-details'>
+            <span><strong>Booked by: <%= lesson.order.user.name %></strong></span>
+            <span>Order Id: <%= lesson.order.id %> </span>
+            <span>Visa *****4242 </span>
           </div>
-        <% end %>
+          <div class='account-amount'>
+            <% if lesson.order.state == 'paid' %>
+              <span>+ $<%= lesson.order.amount %></span>
+            <% else %>
+              <span>Pending $<%= lesson.order.amount %></span>
+            <% end %>
+          </div>
+        </div>
       <%end %>
     <% end %>
     <div class='account-total-card'>
