--- a/app/views/coach/lessons/_list.html.erb
+++ b/app/views/coach/lessons/_list.html.erb
@@ -1,7 +1,8 @@
-<div class='container' >
+<div class='container' data-controller='lesson' data-lesson-target='list'>
+
   <div class='flex-space-between'>
     <h1 class='header'>Coach Lessons</h1>
-    <%= link_to('New Lesson', new_coach_lesson_path, class:"btn btn-flat") %>
+    <%= link_to 'New Lesson', new_coach_lesson_path, class:"btn btn-flat", data: { lesson_target: "newBtn", action: "click->lesson#displayNewForm", }, remote: true  %>
   </div>
 
   <div class='lesson-header-links'>
@@ -10,67 +11,34 @@
     <%= link_to('History', history_coach_lessons_path, class:"lesson-header-link #{"active" if current_page?(history_coach_lessons_path)}") %>
   </div>
 
-  <div data-controller='edit-lesson'>
-
-  <% if @lessons.empty? %>
-  <div class='lesson-header-links'>
-    <h4>No lessons available</h4>
-  </div>
-  <% end %>
-
-  <div data-controller='new-lesson' data-new-lesson-target='list'>
-  <button class='btn btn-flat' data-toggle="modal" data-target="#newLessonModal" data-action="click->new-lesson#displayForm">New Lesson Stim</button>
-    <% @lessons.each do |lesson| %>
-    <%= render 'lesson_card', lesson: lesson %>
+    <% if @lessons.empty? %>
+      <div class='lesson-header-links'>
+        <h4>No lessons available</h4>
+      </div>
+      <% else %>
+        <div>
+          <% @lessons.each do |lesson| %>
+            <%= render 'lesson_card', lesson: lesson %>
+          <% end %>
+        </div>
     <% end %>
 
-    <%# edit lesson modal %>
-    <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModal" aria-hidden="true" data-edit-lesson-target='editModal'>
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
+      <%# lesson modal %>
+      <div class="modal fade" id="lessonModal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true" data-lesson-target='lessonModal'>
+        <div class="modal-dialog" role="document" data-lesson-target='modalContentShow'>
+          <div class="modal-content">
 
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="editModal">Edit Lesson</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="lessonModal">Lesson</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
 
-                  <div class="modal-body editForm" data-edit-lesson-target='modalContent'></div>
-                  <div class="modal-footer"></div>
+                    <div class="modal-body" data-lesson-target='modalContent'></div>
+                  
 
+            </div>
           </div>
         </div>
-      </div>
-
-
-
-
-    <%# new lesson modal %>
-    <div class="modal fade" id="newLessonModal" tabindex="-1" role="dialog" aria-labelledby="newLessonModal" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-
-          <div class="modal-header">
-            <h5 class="modal-title" id="newLessonModal">New Lesson</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-
-          <div class="modal-body">
-            <%= render partial: 'new_lesson_form', locals: { lesson: Lesson.new } %>
-          </div>
-
-            <div class="modal-footer"></div>
-        
-          </div>
-        </div>
-      </div>
-
-
-    </div>
-
-
-    </div>
   </div>
