--- a/app/views/coach/lessons/_show.html.erb
+++ b/app/views/coach/lessons/_show.html.erb
@@ -1,6 +1,4 @@
- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
+<div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel"><%= lesson.coach.sport.name.capitalize %> Lesson <span>
              <% if lesson.status %>
@@ -12,7 +10,7 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
+          <div class="modal-body" data-lesson-target='modalContent'>
               <p><strong>Date/Time:</strong> <%= lesson.start_date_time.strftime("%-d %b %Y") %> | <%= lesson.start_date_time.strftime("%-d.%I%p") %> - <%= lesson.end_date_time.strftime("%-d.%I%p") %> </p>
               <p><strong>Duration:</strong> <%= ((lesson.end_date_time - lesson.start_date_time)/60).round() %> mins </p>
               <% if current_page?(coach_lessons_path)%>
@@ -31,8 +29,6 @@
               <p><strong>Description:</strong> <%= lesson.description %></p>
           </div>
           <div class="modal-footer">
-            <%= link_to('Edit', edit_coach_lesson_path(lesson), class: "btn btn-primary") %>
+            <%= link_to 'Edit Lesson',  edit_coach_lesson_path(lesson), class:'btn btn-flat',  data: { action: "click->lesson#displayEditForm", }, remote: true %>
           </div>
-        </div>
-      </div>
-    </div>
+</div>
