--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -27,7 +27,7 @@
             sessionId: '<%= @order.checkout_session_id %>'
           });
         });
-      </script> -->
+      </script>
     </div>
   </div>
 </div>
