updated review button to disappear after a review has been made

--- a/app/views/lessons/_list.html.erb
+++ b/app/views/lessons/_list.html.erb
@@ -31,7 +31,7 @@
         </button>
         <% if lesson.status && lesson.end_date_time >= Time.now.to_datetime %>
           <%= link_to "Cancel", cancel_booking_lesson_path(lesson), class:'btn btn-outline-danger btn-sm' %>
-        <% elsif lesson.status && lesson.end_date_time < Time.now.to_datetime %>
+        <% elsif lesson.status && lesson.end_date_time < Time.now.to_datetime && lesson.review.nil? %>
           <%= link_to "Review", new_lesson_review_path(lesson), class:'btn btn-outline-danger btn-sm' %>
         <% end %>
     </div>
