simple css & moving chat button

--- a/app/assets/stylesheets/components/_chat.scss
+++ b/app/assets/stylesheets/components/_chat.scss
@@ -28,3 +28,12 @@
     margin-bottom: 0;
   }
 }
+
+.chat-btn a {
+  text-decoration: none;
+  color: darkgray;
+
+  &:hover {
+    color: gray;
+  }
+}
