--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,6 +1,8 @@
 <div class="container">
   <h1 class="header">My Chats</h1>
   <% @chats.each do |chat| %>
-    <%= link_to chat.name, coach_chat_path(chat.coach, chat.id) %>
+    <% unless chat.messages.empty? %>
+      <%= link_to chat.name, coach_chat_path(chat.coach, chat.id) %>
+    <% end %>
   <% end %>
 </div>
