--- a/app/assets/stylesheets/components/_lessons.scss
+++ b/app/assets/stylesheets/components/_lessons.scss
@@ -1,3 +1,9 @@
+#calendar {
+  max-width: 900px;
+  margin: 0 auto;
+  max-height: 900px;
+}
+
 .lesson-card {
   display: flex;
   align-items: center;
