--- a/app/views/coach/lessons/show.html.erb
+++ b/app/views/coach/lessons/show.html.erb
@@ -1,8 +1,8 @@
 <div class='container form'>
 
   <div class='header header-flex'>
-    <h2><%= lesson.coach.sport.name.capitalize %> Lesson <span>
-    <% if lesson.status %>
+    <h2><%= @lesson.coach.sport.name.capitalize %> Lesson <span>
+    <% if @lesson.status %>
         (Booked)
       <% else %>
         (Not Booked)
@@ -11,22 +11,22 @@
   </div>
 
   <div>
-  <p><strong>Date/Time:</strong> <%= lesson.start_date_time.strftime("%-d %b %Y") %> | <%= lesson.start_date_time.strftime("%-d.%I%p") %> - <%= lesson.end_date_time.strftime("%-d.%I%p") %> </p>
-    <p><strong>Duration:</strong> <%= ((lesson.end_date_time - lesson.start_date_time)/60).round() %> mins </p>
+  <p><strong>Date/Time:</strong> <%= @lesson.start_date_time.strftime("%-d %b %Y") %> | <%= @lesson.start_date_time.strftime("%-d.%I%p") %> - <%= @lesson.end_date_time.strftime("%-d.%I%p") %> </p>
+    <p><strong>Duration:</strong> <%= ((@lesson.end_date_time - @lesson.start_date_time)/60).round() %> mins </p>
     <% if current_page?(coach_lessons_path)%>
       <p><strong>Student:</strong>
-      <% if lesson.student %>
-        <%= lesson.student.name %>
+      <% if @lesson.student %>
+        <%= @lesson.student.name %>
       <% else %>
         No student
       <% end %>
       </p>
     <% else %>
       <p><strong>Coach:</strong>
-        <%= link_to User.find(lesson.coach_id).name, coach_path(User.find(lesson.coach_id))  %>
+        <%= link_to User.find(@lesson.coach_id).name, coach_path(User.find(@lesson.coach_id))  %>
     <% end %>
-    <p><strong>Price:</strong> $<%= lesson.price %>/hr</p>
-    <p><strong>Description:</strong> <%= lesson.description %></p>
+    <p><strong>Price:</strong> $<%= @lesson.price %>/hr</p>
+    <p><strong>Description:</strong> <%= @lesson.description %></p>
   </div>
 
 </div>
