--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -8,9 +8,11 @@
 .carousel-control-prev {
   left: -8rem;
   font-size: 2rem;
+  color: $dark-orange;
 }
 
 .carousel-control-next {
   right: -8rem;
   font-size: 2rem;
+  color: $dark-orange;
 }
