--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,8 +1,9 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: linear-gradient(to right, $primary-light-color , $primary-dark-color);
-  color: white;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;;
+  // background: linear-gradient(to right, $primary-light-color , $primary-dark-color);
+  // background-color: rgba(0, 0, 0, 0.5);
+  // box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: black;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -10,14 +11,13 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
+  width: 120px;
+  height: 60px;
 }
 
 .flex {
   display: flex;
-  align-items: center;
+  align-items: top;
 
   h3 {
     font-weight: bold;
@@ -28,6 +28,8 @@
   margin: 0;
   color: white !important;
   font-weight: 500;
+  font-family: "Flama Ultracondensed Black",sans-serif;;
+  font-size: 15px;
 
   &::after {
     content: '';
@@ -82,17 +84,37 @@
   padding-top: 8px;
   padding-right: 8px;
   font-size: 12px;
+  margin: 0;
+  color: white !important;
+  font-weight: 500;
+  font-family: "Flama Ultracondensed Black",sans-serif;
 }
 
 .custom-control-input:focus ~
 .custom-control-label::before {
-  border-color: $secondary-dark-color !important;
+  border-color: transparent !important;
   box-shadow: 0 0 0 0rem rgba(0, 0, 0, 0) !important;
 }
 
-
 .custom-control-input:checked ~
 .custom-control-label::before {
-  border-color: $secondary-dark-color !important;
-  background-color: $secondary-dark-color !important;
+  border-color: transparent !important;
+  background-color: $dark-orange !important;
+}
+
+.navbar_home-lewagon {
+  justify-content: space-between;
+  // background: linear-gradient(to right, $primary-light-color , $primary-dark-color);
+  // background-color: rgba(0, 0, 0, 0.5);
+  // box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: transparent;
+}
+
+.navbar_home-lewagon .navbar-collapse {
+  flex-grow: 0;
+}
+
+.navbar_home-lewagon .navbar-brand img {
+  width: 120px;
+  height: 60px;
 }
