--- a/app/views/coach/lessons/_list.html.erb
+++ b/app/views/coach/lessons/_list.html.erb
@@ -1,6 +1,6 @@
 <div class='container'>
   <div class='flex-space-between'>
-  <h1 class='header'>Coach Lessons</h1>
+  <h1 class='coach-lessons-header'>Coach Lessons</h1>
   <%= link_to('New Lesson', new_coach_lesson_path, class:"btn btn-flat") %>
   </div>
   <div class='lesson-header-links'>
