--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,11 @@
   </head>
 
   <body>
+  <% unless controller_name == "pages" %>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
+  <% end %>
+
 
     <%= yield %>
   </body>
