--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -3,8 +3,8 @@
 
 
 // Define fonts for body and headers
-$body-font: "Flama Ultracondensed Black", "sans-serif";
-$headers-font: "Flama Ultracondensed Black", "sans-serif";
+$body-font: "Oswald", sans-serif;
+$headers-font: "Oswald", sans-serif;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
