--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -22,6 +22,15 @@
   display: none;
 }
 
+.absolute {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 8px;
+  z-index: 1;
+}
+
 @keyframes appear {
   from {
     opacity: 0;
