--- a/app/views/coach/lessons/edit.text.erb
+++ b/app/views/coach/lessons/edit.text.erb
@@ -1,14 +1,14 @@
-<div class='container form'>
+<div class='container form absolute'>
   <div class='header header-flex'>
     <h2>Edit lesson</h2>
-    <%= link_to "Back", :back, class:"back-btn" %>
+    <%= link_to "X", :back, class:"back-btn" %>
   </div>
   <%= simple_form_for(@lesson, method: :patch, url: coach_lesson_path) do |f|%>
-      <%= f.input :start_date_time, :as => :datetime %>
-      <%= f.input :end_date_time, :as => :datetime %>
+      <%= f.input :start_date_time, :as => :datetime, html5: true %>
+      <%= f.input :end_date_time, :as => :datetime, html5: true %>
       <%= f.input :description %>
       <%= f.association :location %>
       <%= f.input :price, as: :numeric %>
-      <%= f.submit class:'btn btn-primary' %>
+      <%= f.submit class:'btn btn-primary float-right' %>
   <% end %>
 </div>
