edited views for coach lessons. added notice and alerts for successful/unsuccessful create/edit

--- a/app/views/coach/lessons/_lesson_card.html.erb
+++ b/app/views/coach/lessons/_lesson_card.html.erb
@@ -19,6 +19,7 @@
           <%= link_to "Delete",
                       coach_lesson_path(lesson),
                       method: :delete,
+                      remote: true,
                       data: { confirm: "Are you sure?" },
                       class: "btn btn-outline-danger btn-sm" %>
 
