--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -22,13 +22,19 @@
   display: none;
 }
 
-.absolute {
+.fixed-modal {
   position: fixed;
+  max-width: 40rem;
+  padding: 1rem;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 8px;
   z-index: 1;
+}
+
+.modal-content {
+  border-radius: 8px !important;
 }
 
 @keyframes appear {
