--- a/app/views/coach/lessons/_list.html.erb
+++ b/app/views/coach/lessons/_list.html.erb
@@ -26,7 +26,7 @@
   </div>
 
   <%# new lesson modal %>
-  <%= simple_form_for(@lesson, method: :post, url: :coach_lessons) do |f|%>
+  <%= simple_form_for(@lesson, method: :post, url: :coach_lessons, remote: true) do |f|%>
  <div class="modal fade" id="newLessonModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
