--- a/app/views/coach/lessons/edit.text.erb
+++ b/app/views/coach/lessons/edit.text.erb
@@ -1,9 +1,10 @@
-<div class='container form absolute' data-lesson-target='card' data-id="<%=@lesson.id%>">
-  <div class='header header-flex'>
-    <h2>Edit lesson</h2>
+<div class='modal-content fixed-modal' data-lesson-target='card' data-id="<%=@lesson.id%>">
+  <div class='modal-header'>
+    <h2 class='modal-title'>Edit lesson</h2>
     <%= link_to "X", :back, class:"back-btn" %>
   </div>
-  <%= simple_form_for(@lesson, method: :patch, url: coach_lesson_path, html: { data: { lesson_target: 'editForm', action: 'submit->lesson#update' } } )do |f|%>
+  <div class="modal-body">
+  <%= simple_form_for(@lesson, method: :patch, url: coach_lesson_path, html: { data: { lesson_target: 'editForm', action: 'submit->lesson#update' } }, remote: true )do |f|%>
       <%= f.input :start_date_time, :as => :datetime, html5: true %>
       <%= f.input :end_date_time, :as => :datetime, html5: true %>
       <%= f.input :description %>
@@ -11,4 +12,5 @@
       <%= f.input :price, as: :numeric %>
       <%= f.submit class:'btn btn-primary float-right' %>
   <% end %>
+  </div>
 </div>
