--- a/app/assets/stylesheets/components/_accounts.scss
+++ b/app/assets/stylesheets/components/_accounts.scss
@@ -2,13 +2,17 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  background: white;
+  color: white;
   margin-bottom: 8px;
   padding-left: 24px;
   padding-right: 24px;
   padding-top: 8px;
   padding-bottom: 8px;
   transition: 400ms ease-in;
+  border-style: solid;
+  border-width: 0.1rem;
+  border-color: white;
+  font-weight: 300;
 
   &:hover {
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
@@ -40,7 +44,7 @@
 .account-total {
   padding: 20px;
   text-align: center;
-  border-top: 1px solid black;
+  border-top: 1px solid white;
 }
 
 .account-details {
@@ -50,4 +54,8 @@
   align-items: left;
   flex-grow: 1;
   margin-left: 20px;
+}
+
+.accounts-header {
+  color: $orange;
 }
