tweaks to broadcast and message partial

--- a/app/views/chats/_chat.html.erb
+++ b/app/views/chats/_chat.html.erb
@@ -13,7 +13,9 @@
     </div>
   </div>
   <div class="chat-history" id="messages" data-chat-id="<%= @chat.id %>">
-    <%= render 'messages/message' %>
+    <% @chat.messages.each do |message| %>
+      <%= render 'messages/message', message: message %>
+    <% end %>
   </div>
 </div>
 
